# teagurilla_embedder

./: LICENSE.md  README.md  pyproject.toml
teagurilla_embedder/: __init__.py  embedder.py  tokenizer.py  vector.py
tests/: test_teagurilla_embedder.py
