[tool.poetry]
name = "teagurilla_embedder"
version = "0.1.0"
description = ""
authors = ["Petro Mozil <mozil.petryk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
transformers = "^4.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
